deploy/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: homepage
spec:
  hosts:
  - "pauwelslabs.com"
  http:
  - name: main
    match:
    - uri:
        prefix: "/t/pauwels-labs-main/homepage/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: homepage
  - name: trailing-slash-redirect
    match:
    - uri:
        exact: "/t/pauwels-labs-main/homepage"
    redirect:
      uri: "/t/pauwels-labs-main/homepage/"
  - name: root
    route:
    - destination:
        port:
          number: 8080
        host: homepage${namesuffix}
